# vcfql

./: .travis.yml  CMakeLists.txt  README.md
src/: ast.c  ast.h  config.h.in  lexer.l  lexer.l.bak  main.c  main.c.bak  parser.y  parser.y.bak
test/: test_ast.c
